# GodotCppTemplate

./: CMakeLists.txt  README.md
cmake/: compiler.cmake  doxygen.cmake  package-managers.cmake  sanitizers.cmake  settings.cmake  sources.cmake  utils.cmake
demo/: icon.svg.import  project.godot
game/: main.tscn  project.godot
include/: temp.h
src/: register_types.cpp  temp.cpp
